# groundzero_v2

./: .gitignore  ARCHITECTURE.md  CURSOR_PROJECT_SETUP_DOC.md  Ground Zero Curriculum - Level 1.csv  Makefile  bkt-simulation.jsx  ground_zero_signal_design_v3.html  ground_zero_system_design.html  ground_zero_technical_design.html  gz level 1  [V2] - level 1 new final .csv  package-lock.json
backend/: .dockerignore  API_REFERENCE.md  CLAUDE.md  Dockerfile  MIGRATIONS.md  alembic.ini  docker-compose.yml  gen_api_docs.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0497ac9a0663_add_users_and_refresh_tokens.py  05b51ecfcc3c_merge_benchmark_and_template_heads.py  11cd30f9d335_add_board_to_students.py  11d3faec93e1_add_resources_to_activities.py  2f6a1c9d8c1a_add_competency_ids_arrays_to_questions.py  369df549dc37_add_launched_at_to_session_activities.py  4412709c8461_merge_heads.py  (+37 more)
backend/app/: auth.py  config.py  database.py  dependencies.py  main.py
backend/docs/: mastery-engine-algorithm.md
backend/scripts/: simulate_all.py  simulate_weak_learner.py
backend/seed/: activities.json  codevelopment_edges.json  competencies.json  curriculum_topics.json  fix_is_correct.py  gen_questions.py  import_questions_to_activity_questions.py  prerequisite_edges.json  questions.json  questions_math.json  questions_math_new.json  seed.py  seed_expanded_graph.py  seed_question_templates.py  seed_users.py  topic_competency_map.json
backend/sim/: live.html  results.json  server.py  simulate.py  viewer.html
backend/tests/: test_bkt_engine.py
(+407 files in other folders)
